fix: resolve JDK 25 deprecation and Hibernate 6 compatibility compilation errors